--- a/src/HompageComp/notLoggedIn.css
+++ b/src/HompageComp/notLoggedIn.css
@@ -1,1228 +1,12 @@
-.imgSwitch {
-  margin-right: 5%;
-}
 
-.container-fluid {
-  margin-left: 3%;
-}
 
-.btns {
-  margin-right: 7%;
-  display: flex;
-}
-
-.nav-btn {
-  background-color: #38a109;
-  color: #ffffff;
-  border: none;
-  border-radius: 30px;
-  padding: 10px 0;
-  text-align: center;
-  font-size: 14px;
-  font-family: roboto;
-  width: 120px;
-  margin-right: 5px;
-}
-
-#frame1 {
-  display: flex;
-  justify-content: space-between;
-  margin: 4% 0 0 7%;
-  width: 88%;
-}
-
-#frame1 .F-frame1 h1 {
-  width: 95%;
-  font-size: 80px;
-  margin-top: -3%;
-}
-
-#frame1 .F-frame1 .h1 {
-  margin-top: -3%;
-}
-
-#frame1 .F-frame1 p {
-  margin-top: 3%;
-  width: 85%;
-  font-size: 33px;
-  font-weight: 400;
-  color: #4b4b4b;
-  line-height: 30px;
-}
-
-#frame1 img {
-  width: 270px;
-  border-radius: 20px;
-}
-
-.F-frame1 button {
-  background-color: transparent;
-  color: #38a109;
-  border: 1px solid #38a109;
-  border-radius: 10px;
-  padding: 10px 0;
-  text-align: center;
-  font-size: 14px;
-  font-family: roboto;
-  width: 170px;
-  margin-top: 3%;
-}
-
-#frame2 {
-  margin: 4% 0 0 7%;
-  width: 88%;
-}
-
-#frame2 h1 {
-  text-align: center;
-  font-size: 50px;
-  font-weight: 700;
-}
-
-#frame2 p {
-  text-align: center;
-  font-size: 24px;
-  width: 80%;
-  color: #4b4b4b;
-  line-height: 30px;
-}
-
-#card1 {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 5%;
-}
-
-#cards {
-  width: 24%;
-  border: 1px solid #38a109;
-  box-shadow: 4px 4px 4px hsla(0, 0%, 0%, 0.25);
-}
-
-#card1 #cards img {
-  width: 30px;
-  margin: 8% 43% 5%;
-}
-
-#cards h2 {
-  font-size: 20px;
-  text-align: center;
-}
-
-#cards p {
-  font-size: 13px;
-  line-height: 15px;
-  padding-left: 15px;
-  padding-right: 20px;
-  width: 100%;
-}
-
-#frame3 {
-  margin: 4% 0 0 7%;
-  width: 88%;
-}
-
-#frame3 h1 {
-  text-align: center;
-  font-size: 50px;
-  font-weight: 700;
-}
-
-#frame3 p {
-  text-align: center;
-  font-size: 24px;
-  width: 80%;
-  color: #4b4b4b;
-  line-height: 30px;
-}
-
-#card2 {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 5%;
-}
-
-#card2 #card-1 {
-  width: 30%;
-  border: 1px solid #38a109;
-  border-top-left-radius: 40px;
-  box-shadow: 4px 4px 4px hsla(0, 0%, 0%, 0.25);
-}
-
-#card2 #card-2 {
-  width: 30%;
-  border: 1px solid #38a109;
-  box-shadow: 4px 4px 4px hsla(0, 0%, 0%, 0.25);
-}
-
-#card2 #card-3 {
-  width: 30%;
-  border: 1px solid #38a109;
-  border-top-right-radius: 40px;
-  box-shadow: 4px 4px 4px hsla(0, 0%, 0%, 0.25);
-}
-
-#card2 img {
-  width: 100%;
-}
-
-#card-1 h2 {
-  font-size: 20px;
-  margin: 5%;
-}
-
-#card-1 p {
-  font-size: 13px;
-  line-height: 15px;
-  padding-left: 5%;
-  width: 75%;
-  text-align: left;
-}
-
-#card-2 h2 {
-  font-size: 20px;
-  margin: 5%;
-}
-
-#card-2 p {
-  font-size: 13px;
-  line-height: 15px;
-  padding-left: 5%;
-  width: 75%;
-  text-align: left;
-}
-
-#card-3 h2 {
-  font-size: 20px;
-  margin: 5%;
-}
-
-#card-3 p {
-  font-size: 13px;
-  line-height: 15px;
-  padding-left: 5%;
-  width: 75%;
-  text-align: left;
-}
-
-#card2 button {
-  background-color: transparent;
-  color: #38a109;
-  border: 1px solid #38a109;
-  margin-left: 2%;
-  padding: 7px 0;
-  text-align: center;
-  font-size: 14px;
-  font-family: roboto;
-  width: 95%;
-  margin-bottom: 5%;
-}
-
-#grouped-icons {
-  display: flex;
-  margin: 10% 0 5% 1%;
-  width: 95%;
-}
-
-#grouped-icon1 {
-  display: flex;
-  width: 170%;
-}
-
-#grouped-icon2 {
-  display: flex;
-  margin-left: 25%;
-  width: 100%;
-}
-
+/* Custom styles not easily achievable with Tailwind */
 #grouped-icons p {
-  font-size: 12px;
-  line-height: 15px;
-  padding-top: 5%;
   width: 400%;
-  text-align: left;
 }
 
-#grouped-icons img {
-  width: 30px;
-  height: 30px;
-}
-
-#frame4 {
-  margin: 4% 0 0 7%;
-  width: 88%;
-  font-family: Roboto;
-}
-
-#frame4 h1 {
-  text-align: left;
-  font-size: 50px;
-  font-weight: 700;
-  margin: 5% 0 3%;
-}
-
-#frame4 p {
-  text-align: left;
-  font-size: 24px;
-  width: 100%;
-  color: #4b4b4b;
-  line-height: 30px;
-}
-
-#box1 {
-  border: 1px solid #4b4b4b;
-  height: 130px;
-  margin-top: 5%;
-  padding-left: 5%;
-}
-
-#box1 h1 {
-  font-size: 40px;
-  margin: 2% 0;
-}
-
-#box1 p {
-  font-size: 22px;
-  margin: -2% 0;
-  font-family: Roboto;
-}
-
-#box2 {
-  border: 1px solid #4b4b4b;
-  height: 130px;
-  margin-top: 2%;
-  padding-left: 5%;
-}
-
-#box2 h1 {
-  font-size: 40px;
-  margin: 2% 0;
-}
-
-#box2 p {
-  font-size: 22px;
-  margin: -2% 0;
-  font-family: Roboto;
-}
-
-#box3 {
-  border: 1px solid #4b4b4b;
-  height: 130px;
-  margin-top: 2%;
-  padding-left: 5%;
-}
-
-#box3 h1 {
-  font-size: 40px;
-  margin: 2% 0;
-}
-
-#box3 p {
-  font-size: 22px;
-  margin: -2% 0;
-  font-family: Roboto;
-}
-
-footer {
-  background-color: #11ea53;
-  margin-top: 4%;
-  width: 100%;
-  font-family: Roboto;
-  padding-top: 1%;
-  padding-bottom: 3%;
-}
-
-#footer1 {
-  width: 100%;
-  margin-top: 2%;
-  text-align: center;
-  align-items: center;
-}
-
-#footer1 h1 {
-  font-size: 55px;
-  font-weight: 500;
-}
-
-#footer1 p {
-  font-size: 22px;
-  color: #4b4b4b;
-  padding-left: 17%;
-  padding-right: 17%;
-}
-
-#footer1 #btn {
-  background-color: #ffffff;
-  color: #38a109;
-  border: 1px solid #000000;
-  padding: 15px 25px;
-  font-size: 16px;
-  font-family: roboto;
-  width: 12%;
-  margin-bottom: 5%;
-  border-radius: 10px;
-  text-align: left;
-}
-
-#footer1 #btn img {
-  width: 20px;
-  margin-top: -3%;
-  margin-left: 23%;
-}
-
-#item1 {
-  margin-left: 7%;
-  margin-top: 3%;
-  width: 23%;
-}
-#item1 img {
-  width: 170px;
-}
-#item1 p {
-  color: #4b4b4b;
-  line-height: 20px;
-}
-
-#item-merged {
-  margin-left: 5%;
-  width: 50%;
-  justify-content: space-between;
-  display: flex;
-}
-
-#item-merged ul::first-line {
-  font-size: 24px;
-  font-weight: bold;
-  color: #000;
-}
-#item-merged li {
-  list-style: none;
-  line-height: 20px;
-}
-#item-merged a {
-  text-decoration: none;
-  color: #4b4b4b;
-}
-
-#item4 {
-  margin-left: 5%;
-  width: 23%;
-}
-#item4 ul::first-line {
-  font-size: 24px;
-  font-weight: bold;
-  color: #000;
-}
-#item4 li {
-  list-style: none;
-  line-height: 20px;
-}
-#item4 a {
-  text-decoration: none;
-  color: #4b4b4b;
-}
-
-#item5 {
-  margin-left: 5%;
-
-  width: 23%;
-}
-#item5 ul::first-line {
-  font-size: 24px;
-  font-weight: bold;
-  color: #000;
-}
-#item5 li {
-  list-style: none;
-  line-height: 20px;
-}
-#item5 a {
-  text-decoration: none;
-  color: #4b4b4b;
-  margin-bottom: 5%;
-}
-
-/* Large devices (desktops, 992px and up) */
-@media (max-width: 1200px) {
-  .imgSwitch {
-    margin-right: 1%;
-  }
-  .navbar-brand img {
-    width: 150px;
-  }
-  .navbar-nav {
-    font-size: 14px;
-    width: 100%;
-  }
-  .container-fluid {
-    margin-left: -5%;
-    width: 100%;
-  }
-
-  .btns {
-    margin-right: -5%;
-    display: flex;
-  }
-
-  .nav-btn {
-    background-color: #38a109;
-    color: #ffffff;
-    border: none;
-    border-radius: 30px;
-    padding: 10px 0;
-    text-align: center;
-    font-size: 14px;
-    font-family: roboto;
-    width: 120px;
-    margin-right: 5px;
-  }
-
-  #frame1 {
-    display: flex;
-    justify-content: space-between;
-    margin: 4% 0 0 7%;
-    width: 88%;
-  }
-
-  #frame1 .F-frame1 h1 {
-    width: 95%;
-    font-size: 60px;
-    margin-top: -3%;
-  }
-
-  #frame1 .F-frame1 .h1 {
-    margin-top: -3%;
-  }
-
-  #frame1 .F-frame1 p {
-    margin-top: 3%;
-    width: 90%;
-    font-size: 26px;
-    font-weight: 400;
-    color: #4b4b4b;
-    line-height: 30px;
-  }
-
-  #frame1 img {
-    width: 270px;
-    border-radius: 20px;
-  }
-
-  .F-frame1 button {
-    background-color: transparent;
-    color: #38a109;
-    border: 1px solid #38a109;
-    border-radius: 10px;
-    padding: 10px 0;
-    text-align: center;
-    font-size: 14px;
-    font-family: roboto;
-    width: 170px;
-    margin-top: 3%;
-  }
-  #grouped-icons {
-    flex-direction: column;
-  }
-  #grouped-icon1 {
-    display: flex;
-    margin-left: 1%;
-    width: 100%;
-  }
-  #grouped-icon2 {
-    display: flex;
-    margin-left: 1%;
-    width: 100%;
-  }
-  #grouped-icons p {
-    font-size: 12px;
-    line-height: 15px;
-    padding-top: 2%;
-    width: 400%;
-    text-align: left;
-  }
-
-  #footer1 #btn {
-    width: 15%;
-  }
-}
-
-/* Medium devices (tablets, 768px and up) */
-@media (max-width: 991px) {
-  .navbar-toggler {
-    margin-right: -5%;
-    z-index: 11;
-  }
-  .navbar {
-    padding: 0.3rem 0.8rem;
-    margin-left: -10%;
-  }
-  .navbar-brand img {
-    width: 90px; /* shrink logo further */
-    margin-left: -5%;
-  }
-  .imgSwitch {
-    display: block;
-    margin-left: 5%;
-  }
-  /* Stack buttons vertically */
-  .btns {
-    flex-direction: column;
-    align-items: left;
-    margin: 10px 0 0;
-  }
-  .nav-btn {
-    width: 20%;
-    font-size: 12px;
-    margin: 5px 0;
-    padding: 8px 0;
-  }
-
-  #frame1 {
-    display: flex;
-    flex-direction: row;
-    margin: 4% 6% 0%;
-    width: 95%;
-  }
-
-  #frame1 .F-frame1 .h1 {
-    margin-top: -3%;
-  }
-
-  #frame1 .F-frame1 h1 {
-    font-size: 45px;
-    width: 90%;
-    font-weight: 600;
-    text-align: center;
-  }
-  #frame1 .F-frame1 p {
-    font-size: 25px;
-    text-align: left;
-    margin-left: 0;
-    width: 95%;
-  }
-
-  #frame1 .F-frame1 button {
-    margin: 3% 5%;
-  }
-
-  #frame1 img {
-    width: 200px;
-    margin-left: -5%;
-  }
-
-  #frame2 {
-    margin: 4% 0 0 3%;
-    width: 95%;
-  }
-  #frame2 h1 {
-    font-size: 40px;
-  }
-
-  #frame2 #p {
-    font-size: 20px;
-    width: 100%;
-    color: #4b4b4b;
-    line-height: 30px;
-    text-align: center;
-  }
-  #card1 {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    margin-left: 5%;
-  }
-
-  #card1 #cards {
-    width: calc(40% - 10px);
-    margin: 5px;
-  }
-
-  #frame3 {
-    width: 95%;
-    margin-left: 5%;
-  }
-
-  #frame3 #p {
-    text-align: center;
-    font-size: 20px;
-    width: 90%;
-    color: #4b4b4b;
-    margin-left: 5%;
-    line-height: 30px;
-  }
-
-  #cards h2 {
-    font-size: 18px;
-  }
-  #cards p {
-    font-size: 12px;
-  }
-
-  #card2 {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    width: 100%;
-  }
-
-  #card2,
-  #card-1,
-  #card-2,
-  #card-3 {
-    width: 100%;
-    margin: 5px;
-  }
-
-  #card2 img {
-    width: 100%;
-  }
-
-  #card-1 h2 {
-    font-size: 25px;
-    margin: 5%;
-  }
-
-  #card-1 p {
-    font-size: 13px;
-    line-height: 20px;
-    padding-left: 5%;
-    width: 90%;
-    text-align: left;
-  }
-
-  #card-2 h2 {
-    font-size: 25px;
-    margin: 5%;
-  }
-
-  #card-2 p {
-    font-size: 13px;
-    line-height: 20px;
-    padding-left: 5%;
-    width: 90%;
-    text-align: left;
-  }
-
-  #card-3 h2 {
-    font-size: 25px;
-    margin: 5%;
-  }
-
-  #card-3 p {
-    font-size: 13px;
-    line-height: 20px;
-    padding-left: 5%;
-    width: 90%;
-    text-align: left;
-  }
-
-  #grouped-icons {
-    flex-direction: column;
-  }
-
-  #grouped-icon2 {
-    display: flex;
-    margin-left: 1%;
-    width: 100%;
-  }
-
-  #grouped-icons p {
-    font-size: 12px;
-    line-height: 15px;
-    padding-top: 2%;
-    width: 400%;
-    text-align: left;
-  }
-
-  #grouped-icons img {
-    width: 17px;
-    height: 17;
-  }
-
-  #footer1 #btn {
-    width: 17%;
-  }
-}
-
-@media (max-width: 768px) {
-  .navbar-toggler {
-    margin-right: -5%;
-    z-index: 11;
-  }
-  .navbar {
-    padding: 0.3rem 0.8rem;
-    margin-left: -10%;
-  }
-  .navbar-brand img {
-    width: 90px; /* shrink logo further */
-    margin-left: -5%;
-  }
-  .imgSwitch {
-    display: block;
-    margin-left: 5%;
-  }
-  /* Stack buttons vertically */
-  .btns {
-    flex-direction: column;
-    align-items: left;
-    margin: 10px 0 0;
-  }
-  .nav-btn {
-    width: 20%;
-    font-size: 12px;
-    margin: 5px 0;
-    padding: 8px 0;
-  }
-
-  #frame1 {
-    display: flex;
-    flex-direction: row;
-    margin: 4% 6% 0% 3%;
-    width: 95%;
-  }
-
-  #frame1 .F-frame1 .h1 {
-    margin-top: -3%;
-  }
-
-  #frame1 .F-frame1 h1 {
-    font-size: 35px;
-    width: 85%;
-    font-weight: 600;
-    text-align: center;
-  }
-  #frame1 .F-frame1 p {
-    font-size: 20px;
-    text-align: left;
-    margin-left: 0;
-    width: 80%;
-  }
-
-  #frame1 .F-frame1 button {
-    margin: 3% 5%;
-  }
-
-  #frame1 img {
-    width: 200px;
-    margin-left: -5%;
-  }
-
-  #frame2 {
-    margin: 4% 0 0 3%;
-    width: 95%;
-  }
-  #frame2 h1 {
-    font-size: 40px;
-  }
-
-  #frame2 #p {
-    font-size: 20px;
-    width: 100%;
-    color: #4b4b4b;
-    line-height: 30px;
-    text-align: center;
-  }
-  #card1 {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 100%;
-  }
-
-  #card1 #cards {
-    width: calc(40% - 10px);
-    margin: 20px;
-  }
-
-  #frame3 {
-    width: 95%;
-    margin-left: 0;
-  }
-
-  #frame3 #p {
-    text-align: center;
-    font-size: 20px;
-    width: 90%;
-    color: #4b4b4b;
-    margin-left: 5%;
-    line-height: 30px;
-  }
-
-  #cards h2 {
-    font-size: 18px;
-  }
-  #cards p {
-    font-size: 12px;
-  }
-
-  #card2 {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    width: 100%;
-  }
-
-  #card2,
-  #card-1,
-  #card-2,
-  #card-3 {
-    width: 100%;
-    margin: 5px;
-  }
-
-  #card2 img {
-    width: 100%;
-  }
-
-  #card-1 h2 {
-    font-size: 25px;
-    margin: 5%;
-  }
-
-  #card-1 p {
-    font-size: 13px;
-    line-height: 20px;
-    padding-left: 5%;
-    width: 90%;
-    text-align: left;
-  }
-
-  #card-2 h2 {
-    font-size: 25px;
-    margin: 5%;
-  }
-
-  #card-2 p {
-    font-size: 13px;
-    line-height: 20px;
-    padding-left: 5%;
-    width: 90%;
-    text-align: left;
-  }
-
-  #card-3 h2 {
-    font-size: 25px;
-    margin: 5%;
-  }
-
-  #card-3 p {
-    font-size: 13px;
-    line-height: 20px;
-    padding-left: 5%;
-    width: 90%;
-    text-align: left;
-  }
-
-  #grouped-icons {
-    flex-direction: column;
-  }
-
-  #grouped-icon2 {
-    display: flex;
-    margin-left: 1%;
-    width: 100%;
-  }
-
-  #grouped-icons p {
-    font-size: 12px;
-    line-height: 15px;
-    padding-top: 2%;
-    width: 400%;
-    text-align: left;
-  }
-
-  #grouped-icons img {
-    width: 17px;
-    height: 17;
-  }
-
-  #footer1 #btn {
-    width: 20%;
-  }
-}
-
-/* For very small devices: 240px – 520px */
 @media (max-width: 600px) {
-  .navbar-toggler {
-    margin-right: -16%;
-  }
-  .navbar {
-    padding: 0.3rem 0.8rem;
-    margin-left: -10%;
-  }
-
-  .navbar-brand img {
-    width: 90px; /* shrink logo further */
-    margin-left: -40%;
-  }
-
-  .imgSwitch {
-    display: block;
-    margin-left: 45%;
-  }
-
-  /* Collapse menu styling */
-  .navbar-collapse {
-    background-color: #fff;
-    padding: 0.8rem;
-    text-align: center;
-  }
-
-  .navbar-nav .nav-item {
-    padding: 0.4rem 0;
-  }
-
-  /* Stack buttons vertically */
-  .btns {
-    flex-direction: column;
-    align-items: center;
-    margin: 10px 0 0;
-  }
-
-  .nav-btn {
-    width: 65%;
-    font-size: 12px;
-    margin: 5px 0;
-    padding: 8px 0;
-  }
-
-  /* Adjust hero/frame section */
-  #frame1 {
-    flex-direction: column;
-    align-items: center;
-    margin: 2% auto;
-    width: 95%;
-    text-align: center;
-  }
-
-  #frame1 .F-frame1 h1 {
-    font-size: 28px; /* down from 100px */
-    margin-top: 0;
-  }
-
-  #frame1 .F-frame1 p {
-    font-size: 14px; /* down from 40px */
-    width: 90%;
-    line-height: 20px;
-    text-align: justify;
-    padding: 5px 0;
-    margin-left: 5%;
-  }
-
-  #frame1 img {
-    width: 170px; /* shrink images */
-    margin-top: 15px;
-    margin-bottom: 8%;
-    margin-left: -5%;
-  }
-
-  #frame2 #p {
-    text-align: left;
-    margin-left: 5%;
-    font-size: 22px;
-    width: 95%;
-    color: #4b4b4b;
-    line-height: 30px;
-  }
-  #card1 {
-    margin-left: 0;
-    width: 100%;
-  }
-  #card1 #cards {
-    width: 60%;
-    border: 1px solid #38a109;
-    box-shadow: 4px 4px 4px hsla(0, 0%, 0%, 0.25);
-  }
-
-  #card1 #cards img {
-    width: 20px;
-    margin: 8% 43% 5%;
-  }
-
-  #cards h2 {
-    font-size: 18px;
-    text-align: center;
-  }
-
-  #cards p {
-    font-size: 13px;
-    line-height: 15px;
-    padding-left: 15px;
-    padding-right: 20px;
-    width: 100%;
-  }
-
-  #frame3 #p {
-    text-align: left;
-    font-size: 20px;
-    width: 90%;
-    color: #4b4b4b;
-    margin-left: 5%;
-    line-height: 30px;
-  }
-
-  /* Cards: stack vertically */
-  #card1,
-  #card2 {
-    flex-direction: column;
-    align-items: center;
-  }
-  #card2 #card-1 {
-    width: 90%;
-    margin-bottom: 15px;
-  }
-  #card2 #card-2 {
-    width: 90%;
-    margin-bottom: 15px;
-  }
-  #card2 #card-3 {
-    width: 90%;
-    margin-bottom: 15px;
-  }
-
-  #card2 img {
-    width: 100%;
-  }
-
-  #card-1 h2 {
-    font-size: 22px;
-    margin: 5%;
-  }
-
-  #card-1 p {
-    font-size: 17px;
-    line-height: 20px;
-    padding-left: 5%;
-    width: 90%;
-    text-align: left;
-  }
-
-  #card-2 h2 {
-    font-size: 22px;
-    margin: 5%;
-  }
-
-  #card-2 p {
-    font-size: 17px;
-    line-height: 20px;
-    padding-left: 5%;
-    width: 90%;
-    text-align: left;
-  }
-
-  #card-3 h2 {
-    font-size: 22px;
-    margin: 5%;
-  }
-
-  #card-3 p {
-    font-size: 17px;
-    line-height: 20px;
-    padding-left: 5%;
-    width: 90%;
-    text-align: left;
-  }
-
-  #card2 button {
-    background-color: transparent;
-    color: #38a109;
-    border: 1px solid #38a109;
-    margin-left: 5%;
-    padding: 7px 0;
-    text-align: center;
-    font-size: 14px;
-    font-family: roboto;
-    width: 90%;
-    margin-bottom: 5%;
-  }
-
-  #grouped-icons {
-    display: block;
-    margin: 10% 0 5% 3%;
-    width: 95%;
-  }
-
-  #grouped-icon1 {
-    display: flex;
-    width: 80%;
-  }
-
-  #grouped-icon2 {
-    display: flex;
-    width: 80%;
-    margin-left: 0;
-  }
-
   #grouped-icons p {
-    font-size: 15px;
-    font-weight: 500;
-    line-height: 15px;
-    padding-top: 3%;
     width: 100%;
-    text-align: left;
-  }
-
-  #grouped-icons img {
-    width: 30px;
-    height: 30px;
-  }
-
-  #frame4 {
-    margin: 4% 0 0 7%;
-    width: 88%;
-    font-family: Roboto;
-  }
-
-  #frame4 h1 {
-    text-align: left;
-    font-size: 30px;
-    font-weight: 700;
-    margin: 5% 0 3%;
-  }
-
-  #frame4 p {
-    text-align: left;
-    font-size: 18px;
-    width: 100%;
-    color: #4b4b4b;
-    line-height: 30px;
-  }
-
-  /* Footer adjustments */
-  footer {
-    text-align: center;
-    padding: 1rem;
-  }
-
-  #footer1 h1 {
-    font-size: 28px;
-  }
-
-  #footer1 p {
-    font-size: 14px;
-    padding: 0 5%;
-  }
-
-  #item1,
-  #item-merged,
-  #item4,
-  #item5 {
-    width: 100%;
-    margin: 10px 0;
-    text-align: center;
-  }
-
-  #item1 img {
-    width: 100px;
-  }
-
-  #item-merged ul::first-line,
-  #item4 ul::first-line,
-  #item5 ul::first-line {
-    font-size: 18px;
-  }
-
-  #footer1 #btn {
-    width: 40%;
   }
 }
